
ChangeLog
 [ + added, - removed, * changed ]
 * 21Nov2012 Added improved support to instrument nanos+MPI apps including
               examples for OmpSs and MPI+OmpSs
             In Linux, merging process automatically uses binary name as
               default trace file name and no longer requires -e neither in xml.
 * 07Nov2013 Disallow --with-X= in the configure line
 * 05Nov2013 Added -rpath to the used MPI library to all lib*mpi*so libraries
             Fix segfault when no performance counters are given to Extrae
             Create TMPDIR directory if it does not exist
 * 09Oct2013 Fixed bug in merger when processing HWC_CHANGE_EV: counters shared by the old and the new set appeared twice.
 + 26Sep2013 Fix missing header in merger files
             BFD compilation in cross-compiled environments
             Autodetection of librt using gcc --print-file-name=librt.so
             New --with-librt to pass the location of librt
 * 17Sep2013 Improved instrumentation support for MPI_Comm_spawn. Now supports concurrent spawns from different process of the parent application.
 + 09Sep2013 Added a quicksort algorithm for files 
 * 09Sep2013 Revamped pthread event types so as all calls are only one type
             Prepare scripts for LSF & slurm (MPI)
 * 06Sep2013 Fixed some warnings
             Read /proc/self/maps to know which binaries & libraries are used
             Create tests to test the usage of binaries & libraries
             Additional location for MPI libraries / includes / binaries in BG/Q
             Many minor bugfixes
             Fixed minor configure/compilation issues
             Protected includes of system headers by their appropriate #ifdef's
             Added missing licensing headers
 * 05Sep2013 Upgraded to version 3.0rc2
             Major changes to the on-line analysis. The front-end is now launched as a separate process.